# z3_python_iptables

./: .gitignore  LICENSE  PYTHON_IPTABLES_PORT_PLAN.md  README.md  pyproject.toml
examples/iptables/: sample.rules  sample_alt.rules
firewall_checker/: __init__.py  analysis.py  model.py  parser.py  solver.py
firewall_checker/cli/: __init__.py  equivalence.py  query.py
tests/: test_parser.py  test_property_model.py  test_solver_equivalence.py
